@@ -111,7 +111,7 @@ public class GenericPanel extends HourglassPanel implements DataBoxPanelInterfac
         
         layeredPane.add(resultPanel, JLayeredPane.DEFAULT_LAYER);
         layeredPane.add(m_infoToggleButton.getInfoPanel(), JLayeredPane.PALETTE_LAYER);  
-        layeredPane.add(m_searchToggleButton.getSearchPanel(), new Integer(JLayeredPane.PALETTE_LAYER+1));
+        layeredPane.add(m_searchToggleButton.getSearchPanel(), Integer.valueOf(JLayeredPane.PALETTE_LAYER+1));
     }
     
     private JPanel createResultPanel(boolean removeStripAndSort) {
