@@ -26,7 +26,7 @@ import fr.proline.studio.filter.DoubleFilter;
 import fr.proline.studio.filter.Filter;
 import fr.proline.studio.graphics.PlotInformation;
 import fr.proline.studio.graphics.PlotType;
-import fr.proline.studio.table.renderer.DefaultRightAlignRenderer;
+import fr.proline.studio.table.renderer.DefaultAlignRenderer;
 import fr.proline.studio.table.renderer.DoubleRenderer;
 import fr.proline.studio.rsmexplorer.gui.renderer.FloatRenderer;
 import fr.proline.studio.extendedtablemodel.GlobalTableModelInterface;
@@ -41,6 +41,7 @@ import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import javax.swing.*;
 import javax.swing.table.TableCellRenderer;
 import fr.proline.studio.extendedtablemodel.ExtendedTableModelInterface;
 
@@ -321,23 +322,23 @@ public class PeakTableModel extends LazyTableModel implements GlobalTableModelIn
         List<Color> scanColor = new ArrayList();
         if(m_feature != null) {
             if (m_feature.getFirstScan() != null) {
-                scanValues.add(new Double(m_feature.getFirstScan().getTime()/60));
+                scanValues.add(Double.valueOf(m_feature.getFirstScan().getTime()/60));
                 scanText.add(" Time: ");
                 scanColor.add(m_color);
             }
             if (m_feature.getLastScan() != null) {
-                scanValues.add(new Double(m_feature.getLastScan().getTime()/60));
+                scanValues.add( Double.valueOf(m_feature.getLastScan().getTime()/60));
                 scanText.add(" Time: ");
                 scanColor.add(m_color);
             }
         } else if (m_peakel != null) {
             if (m_peakel.getFirstScan() != null) {
-                scanValues.add(new Double(m_peakel.getFirstScan().getTime()/60));
+                scanValues.add(Double.valueOf(m_peakel.getFirstScan().getTime()/60));
                 scanText.add(" Time: ");
                 scanColor.add(m_color);
             }
             if (m_peakel.getLastScan() != null) {
-                scanValues.add(new Double(m_peakel.getLastScan().getTime()/60));
+                scanValues.add(Double.valueOf(m_peakel.getLastScan().getTime()/60));
                 scanText.add(" Time: ");
                 scanColor.add(m_color);
             }
@@ -376,12 +377,12 @@ public class PeakTableModel extends LazyTableModel implements GlobalTableModelIn
 
         switch (col) {
             case COLTYPE_PEAK_MOZ: {
-                renderer = new DoubleRenderer( new DefaultRightAlignRenderer(TableDefaultRendererManager.getDefaultRenderer(String.class)) );
+                renderer = new DoubleRenderer( new DefaultAlignRenderer(TableDefaultRendererManager.getDefaultRenderer(String.class), JLabel.RIGHT) );
                 break;
             }
             case COLTYPE_PEAK_RETENTION_TIME:
             case COLTYPE_PEAK_INTENSITY: {
-                renderer = new FloatRenderer( new DefaultRightAlignRenderer(TableDefaultRendererManager.getDefaultRenderer(String.class)) );
+                renderer = new FloatRenderer( new DefaultAlignRenderer(TableDefaultRendererManager.getDefaultRenderer(String.class), JLabel.RIGHT) );
                 break;
             }
         }
